# vade

./: .gitlab-ci.yml  Cargo.toml  README.md  VERSIONS.md
src/: lib.rs  traits.rs  utils.rs  vade.rs  vade_plugin.rs
src/plugin/: mod.rs  rust_storage_cache.rs
tests/: library.rs  library_did.rs  library_message_consumer.rs  library_vc.rs  storage.rs  vade_plugin.rs
