[package]
name = "vade"
version = "0.0.7"
authors = ["evan GmbH"]
edition = "2018"
license = "Apache-2.0"
license-file = "LICENSE.txt"
description = "VC and DID engine"
homepage = "https://github.com/evannetwork/vade"
documentation = "https://docs.rs/crate/vade"
repository = "https://github.com/evannetwork/vade"
readme = "README.md"
keywords = ["did", "ssi", "vc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.31"
env_logger = "0.7.1"
futures = "0.3.5"
log = "0.4.8"

[dev-dependencies]
tokio = { version = "0.2.21", features = ["macros", "rt-threaded"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
