[package]
name = "vade"
version = "0.0.8"
authors = ["evan GmbH"]
edition = "2018"
license-file = "LICENSE.txt"
description = "VC and DID engine"
homepage = "https://github.com/evannetwork/vade"
documentation = "https://docs.rs/crate/vade"
repository = "https://github.com/evannetwork/vade"
readme = "README.md"
keywords = ["did", "ssi", "vc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
